<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baseball_field_opacity"
    tools:context="pitcherseye.pitcherseye.Login.LoginActivity" >

    <ImageView
        android:id="@+id/login_panel"
        android:layout_width="365dp"
        android:layout_height="454dp"
        android:background="@drawable/background_square"
        app:layout_constraintBottom_toBottomOf="@id/button_signup_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/edt_confirm_signup_password"
        app:layout_constraintRight_toRightOf="@id/edt_confirm_signup_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/panel_logo"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/panel_logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/edt_first_name"
        app:layout_constraintEnd_toEndOf="@+id/button_signup_register"
        app:layout_constraintStart_toStartOf="@+id/button_signup_register"
        app:srcCompat="@drawable/pitchers_eye_transparent" />

    <EditText
        android:id="@+id/edt_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_first_name"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_last_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edt_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_last_name"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_signup_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edt_signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edt_signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_password"
        android:inputType="textPassword"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_signup_email" />

    <EditText
        android:id="@+id/edt_confirm_signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_signup_password" />

    <!-- Keep this commented out until we can scale -->
    <!--<EditText
        android:id="@+id/edt_team_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/string_team_id"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edt_registration_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/string_registration_id"
        app:layout_constraintTop_toBottomOf="@id/edt_team_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />-->

    <Button
        android:id="@+id/button_signup_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/tagging_button"
        android:text="@string/string_register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_confirm_signup_password"
        app:layout_constraintStart_toStartOf="@+id/edt_confirm_signup_password"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_signup_password" />

    <ProgressBar
        android:id="@+id/progress_signup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_signup_register"
        app:layout_constraintStart_toEndOf="@+id/button_signup_register"
        app:layout_constraintTop_toTopOf="@+id/button_signup_register" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
